# vxgi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  ppt.html  ppt.md
assets/crytek-sponza/: sponza.mtl
shaders/: debugDepthMap.frag  debugDepthMap.vert  depthMap.frag  depthMap.vert  emit.frag  emit.vert  fs.frag  fsociety.frag  gshader.gs  scene.frag  scene.vert  vct.frag  vct.vert  vis.frag  vis.vert  voxelization.frag  voxelization.geom  voxelization.gs  voxelization.vert  vs.vert
src/: camera.cpp  camera.h  constants.cpp  constants.h  editor.cpp  editor.h  main.cpp  material.h  mesh.h  scene.cpp  scene.h  shader.cpp  shader.h  shadowmap.cpp  shadowmap.h  utils.cpp  utils.h  voxelmap.cpp  voxelmap.h
